pera fonts color,size,spacing issue fix

--- a/src/components/ComponentCardContainer.css
+++ b/src/components/ComponentCardContainer.css
@@ -39,6 +39,6 @@
   font-size: 24px;
   font-weight: 700;
   color: #023047;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   margin-left: 6px;
 }
